--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,22 @@ body {
   background: linear-gradient(95deg, rgb(52, 126, 168) 0%, rgba(36, 17, 133, 0.795) 100%);
   color: white;
 }
+
+
+button {
+  background: #100696;
+  color: white;
+  padding: 0 45px;
+  border: 2px solid white;
+  border-radius: 25px;
+  height: 50px;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1.2em;
+  cursor: pointer;
+  transform: .4s;
+}
+
+button:hover {
+  background-color: #0c056d;
+}
